Add content and styling of content of food.html

--- a/food.html
+++ b/food.html
@@ -23,7 +23,7 @@
 
 <body>
     <header>
-        
+
         <nav>
             <a href="index.html">
                 <img id="logo" src="assets/images/One-Backpack-For-Two_logo.png" alt="logo">
@@ -46,72 +46,114 @@
     </header>
     <h1 id="food-heading">Food Posts</h1>
 
-     <!-- The Top 3 Vegan Restaurants in Dublin, Ireland -->
+    <!-- Top 5 Vegan Restaurants to Visit in Berlin, Germany  -->
     <article class="food-post">
-        <h2 class="food-post-heading"></h2>
-        <img src=""
-            alt="">
-        <span><em></em></span>
+        <h2 class="food-post-heading">Top 5 Vegan Restaurants to Visit in Berlin, Germany</h2>
+        <img src="assets/images/berlin.jpg" alt="Brandenburger Gate Berlin">
+        <span><em>Saturday, 10.09.2022</em></span>
         <hr>
-        <p>
+        <p>Veganism is on the rise, and no city exemplifies this trend better than Berlin. Suppose you're a vegan
+            traveller looking for a destination that will cater to your dietary needs, look no further than Berlin. The
+            German capital is home to a wealth of vegan-friendly restaurants, cafes, and bakeries, making it the perfect
+            place to indulge in delicious plant-based cuisine.
         </p>
         <hr>
         <section>
-            <h3></h3>
-            <img src="" alt="">
-            <p></p>
+            <h3>Cafe Vux</h3>
+            <img src="assets/images/CafeVux.jpeg" alt="people order at counter next to a fridge full of cakes">
+            <p>If you have a sweet tooth, then this is the place for you. Cafe Vux specializes in - you guessed it - all
+                things cake. But don't worry, they have savoury options too. And everything is vegan!</p>
         </section>
         <hr>
         <section>
-            <h3></h3>
-            <img src="" alt="">
-            <p></p>
+            <h3>Kopps</h3>
+            <img src="assets/images/Kopps.png" alt="potrait of a plate with food on a table and a glass of wine in the background ">
+            <p>If you're looking for a fine dining experience, Kopps is the place for you. This Michelin-starred
+                restaurant serves up creative takes on classic German dishes, all of which are 100% vegan. From savoury
+                cabbage strudel to delicate almond tarts, there's something for everyone at Kopp's.</p>
         </section>
         <hr>
 
         <section>
-            <h3></h3>
-            <img src=""
-                alt="">
-            <p></p>
+            <h3>Frea</h3>
+            <img src="assets/images/Frea.jpg" alt="set table with food surrounded by plants in restaurant">
+            <p>This restaurant is perfect if you're looking for a fancier experience. Frea serves up gourmet
+                vegan cuisine that will tantalize your taste buds. Make sure to make a reservation ahead of time though,
+                as it's always crowded!</p>
+        </section>
+        <hr>
+
+        <section>
+            <h3>Brammibal's Donuts</h3>
+            <img src="assets/images/Brammibal'sDonuts.webp" alt="plate filled with different types of Donuts">
+            <p>This popular doughnut shop offers both sweet and savoury options with some inventive flavour combinations
+                such as Earl Grey & Lavender or Cauliflower & Dill Pickle. If you're feeling daring, take on the
+                challenge of the 'deconstructed doughnut' which comes with everything you need to build your own custom
+                creation.</p>
+        </section>
+        <hr>
+
+        <section>
+            <h3>Lucky Leek</h3>
+            <img src="assets/images/LuckyLeek.jpg" alt="potrait of a plate with food on a table and a glass of wine in the background ">
+            <p>For those looking for a more upscale experience, look no further than Lucky Leek. This Michelin-starred
+                restaurant is known for its creative and ever-changing menu, offering unique dishes such as onion tart
+                with pistachio cream or roasted cauliflower with smoked almond milk. With a focus on seasonal and local
+                ingredients, Lucky Leek is the perfect spot for a special night out.</p>
         </section>
         <hr>
         <p><em>Conclusion:</em> <br>
+            Whether you're a longtime vegan or simply looking to try something new, Berlin is the perfect destination
+            for plant-based cuisine. With its plethora of vegan-friendly eateries, there's something for everyone to
+            enjoy in this vibrant city. So what are you waiting for? Bon appetit!
         </p>
-
     </article>
 
- <!-- Top 5 Vegan Restaurants to Visit in Berlin, Germany  -->
+    <!-- The Top 3 Vegan Restaurants in Dublin, Ireland -->
     <article class="food-post">
-        <h2 class="food-post-heading"></h2>
-        <img src=""
-            alt="">
-        <span><em></em></span>
+        <h2 class="food-post-heading">The Top 3 Vegan Restaurants in Dublin, Ireland</h2>
+        <img src="assets/images/dublin.jpg" alt="Tempel Bar Street in Dublin">
+        <span><em>Thursday, 08.09.2022</em></span>
         <hr>
-        <p>
+        <p>We're always on the lookout for good vegan food when we travel. And we have to say, Dublin does
+            not disappoint! Whether you're looking for a
+            quick bite or a sit-down meal, you're sure to find something to your taste. Dublin is a bustling city with
+            plenty to see and do. And if you're a vegan traveller, you'll be happy to know that there are plenty of
+            vegan-friendly restaurants to choose from.
         </p>
         <hr>
         <section>
-            <h3></h3>
-            <img src="" alt="">
-            <p></p>
+            <h3>Cornucopia</h3>
+            <img src="assets/images/Cornucopia.jpg" alt="shot from above of two plated salads with food garnish around">
+            <p>Cornucopia has been serving up delicious vegetarian and vegan food in Dublin since Sinead O'Connor was
+                topping the charts with "Nothing Compares 2 U." This restaurant is located in the heart of Dublin's city
+                centre and offers an extensive menu of both hot and cold dishes. Whether you're looking for a light
+                lunch or a three-course meal, Cornucopia has something for everyone.</p>
         </section>
         <hr>
         <section>
-            <h3></h3>
-            <img src="" alt="">
-            <p></p>
+            <h3>Veginity</h3>
+            <img src="assets/images/Veginity.jpg" alt="shot from above of a table full with brunch items">
+            <p>2.As the name suggests, this restaurant is 100% vegan. They offer a wide range of
+                dishes for breakfast, lunch and dinner. Veginity is located in Dublin D1, so
+                it's just a short walk from the city centre. Perfect if you don't want to venture too far from all the
+                action! And don't forget to grab one of their delicious pastries!</p>
         </section>
         <hr>
 
         <section>
-            <h3></h3>
-            <img src=""
-                alt="">
-            <p></p>
+            <h3>Glas Restaurant</h3>
+            <img src="assets/images/GlasRestaurant.webp" alt="shot of decorating a plate that is about to be served">
+            <p>Glas Restaurant is one of the leading fine dining establishments in Dublin. The restaurant offers a
+                seasonal menu of vegetarian and vegan dishes, including starters, main courses, and desserts. The Glas
+                restaurant also has an extensive wine list, making it the perfect place to enjoy a special occasion meal
+                or celebrate a special event.</p>
         </section>
         <hr>
         <p><em>Conclusion:</em> <br>
+            Whether you're vegan or just looking for some good plant-based options, Dublin has you covered! These are just
+            a few of the many excellent vegan eateries that the city has to offer. So next time you're in town, be sure
+            to check them out!
         </p>
 
     </article>
@@ -123,7 +165,8 @@
             </li>
             <li>
                 <a href="http://instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit out Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+                    aria-label="Visit out Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a>
             </li>
             <li>
                 <a href="http://twitter.com" target="_blank" rel="noopener"
@@ -131,7 +174,8 @@
             </li>
             <li>
                 <a href="http://pinterest.com" target="_blank" rel="noopener"
-                    aria-label="Visit out Pinterest page (opens in a new tab)"><i class="fa-brands fa-pinterest"></i></a>
+                    aria-label="Visit out Pinterest page (opens in a new tab)"><i
+                        class="fa-brands fa-pinterest"></i></a>
             </li>
         </ul>
     </footer>
