Fix structure and style of <header> by making it a flexbox

--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
 </head>
 
 <body>
-    <header>
-
+    <header id="header">
+        <a href="index.html">
+            <img id="logo" src="assets/images/One-Backpack-For-Two_logo.png" alt="logo">
+        </a>
         <nav>
-            <a href="index.html">
-                <img id="logo" src="assets/images/One-Backpack-For-Two_logo.png" alt="logo">
-            </a>
             <ul id="menu">
                 <li>
                     <a href="index.html">HOME</a>
@@ -53,7 +52,7 @@
                 <form action="about-us.html">
                     <button type="submit" class="our-story">Our Story</button>
                 </form>
-                
+
             </div>
         </div>
     </section>
