Add <header> structure to travel.html, food.html and about-us.html

--- a/food.html
+++ b/food.html
@@ -22,12 +22,11 @@
 </head>
 
 <body>
-    <header>
-
+    <header id="header">
+        <a href="index.html">
+            <img id="logo" src="assets/images/One-Backpack-For-Two_logo.png" alt="logo">
+        </a>
         <nav>
-            <a href="index.html">
-                <img id="logo" src="assets/images/One-Backpack-For-Two_logo.png" alt="logo">
-            </a>
             <ul id="menu">
                 <li>
                     <a href="index.html">HOME</a>
@@ -36,7 +35,7 @@
                     <a href="travel.html">TRAVEL</a>
                 </li>
                 <li>
-                    <a href="food.html" class="active">FOOD</a>
+                    <a href="food.html">FOOD</a>
                 </li>
                 <li>
                     <a href="about-us.html">ABOUT US</a>
