--- a/travel.html
+++ b/travel.html
@@ -22,18 +22,17 @@
 </head>
 
 <body>
-    <header>
-
+    <header id="header">
+        <a href="index.html">
+            <img id="logo" src="assets/images/One-Backpack-For-Two_logo.png" alt="logo">
+        </a>
         <nav>
-            <a href="index.html">
-                <img id="logo" src="assets/images/One-Backpack-For-Two_logo.png" alt="logo">
-            </a>
             <ul id="menu">
                 <li>
                     <a href="index.html">HOME</a>
                 </li>
                 <li>
-                    <a href="travel.html" class="active">TRAVEL</a>
+                    <a href="travel.html">TRAVEL</a>
                 </li>
                 <li>
                     <a href="food.html">FOOD</a>
