--- a/about-us.html
+++ b/about-us.html
@@ -22,12 +22,11 @@
 </head>
 
 <body>
-    <header>
-
+    <header id="header">
+        <a href="index.html">
+            <img id="logo" src="assets/images/One-Backpack-For-Two_logo.png" alt="logo">
+        </a>
         <nav>
-            <a href="index.html">
-                <img id="logo" src="assets/images/One-Backpack-For-Two_logo.png" alt="logo">
-            </a>
             <ul id="menu">
                 <li>
                     <a href="index.html">HOME</a>
@@ -39,7 +38,7 @@
                     <a href="food.html">FOOD</a>
                 </li>
                 <li>
-                    <a href="about-us.html" class="active">ABOUT US</a>
+                    <a href="about-us.html">ABOUT US</a>
                 </li>
             </ul>
         </nav>
