Fix: Add reduced size images to increase performance

--- a/about-us.html
+++ b/about-us.html
@@ -24,7 +24,7 @@
 <body>
     <header id="header">
         <a href="index.html">
-            <img id="logo" src="assets/images/One-Backpack-For-Two_logo.png" alt="logo">
+            <img id="logo" src="assets/images/One-Backpack-For-Two_logo.jpg" alt="logo">
         </a>
         <nav>
             <ul id="menu">
