--- a/food.html
+++ b/food.html
@@ -24,7 +24,7 @@
 <body>
     <header id="header">
         <a href="index.html">
-            <img id="logo" src="assets/images/One-Backpack-For-Two_logo.png" alt="logo">
+            <img id="logo" src="assets/images/One-Backpack-For-Two_logo.jpg" alt="logo">
         </a>
         <nav>
             <ul id="menu">
@@ -66,7 +66,7 @@
         <hr>
         <section>
             <h3>Kopps</h3>
-            <img src="assets/images/Kopps.png" alt="potrait of a plate with food on a table and a glass of wine in the background ">
+            <img src="assets/images/Kopps.jpg" alt="potrait of a plate with food on a table and a glass of wine in the background ">
             <p>If you're looking for a fine dining experience, Kopps is the place for you. This Michelin-starred
                 restaurant serves up creative takes on classic German dishes, all of which are 100% vegan. From savoury
                 cabbage strudel to delicate almond tarts, there's something for everyone at Kopp's.</p>
