Fix: Change action=# to url from dump to see the result

--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
                 <p>In need of some inspiration for your travels and on the hunt for some delish foodie places? Sign
                     up to our newsletter to receive ideas about your travel adventure and where to find the good
                     culinary spots! </p>
-                <form action="#" target="_blank" method="post" class="newsletter-form">
+                <form action="https://formdump.codeinstitute.net/" class="newsletter-form">
                     <label for="fname"></label>
                     <input type="text" id="fname" name="first_name" class="text-input" placeholder="First Name"
                         required>
                     <label for="email"></label>
-                    <input type="text" id="email" name="email-address" class="text-input" placeholder="Email Address"
+                    <input type="email" id="email" name="email-address" class="text-input" placeholder="Email Address"
                         required>
                     <input type="submit" value="Sign me up!" class="newsletter-button">
                 </form>
