Add .active style to navigation links and set font-weight to bold

--- a/food.html
+++ b/food.html
@@ -35,7 +35,7 @@
                     <a href="travel.html">TRAVEL</a>
                 </li>
                 <li>
-                    <a href="food.html">FOOD</a>
+                    <a href="food.html" class="active">FOOD</a>
                 </li>
                 <li>
                     <a href="about-us.html">ABOUT US</a>
