--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="index.html">HOME</a>
+                    <a href="index.html" class="active">HOME</a>
                 </li>
                 <li>
                     <a href="travel.html">TRAVEL</a>
