--- a/travel.html
+++ b/travel.html
@@ -32,7 +32,7 @@
                     <a href="index.html">HOME</a>
                 </li>
                 <li>
-                    <a href="travel.html">TRAVEL</a>
+                    <a href="travel.html" class="active">TRAVEL</a>
                 </li>
                 <li>
                     <a href="food.html">FOOD</a>
