Link #dublin from index.html to eaxact section of food.html

--- a/food.html
+++ b/food.html
@@ -109,7 +109,7 @@
     </article>
 
     <!-- The Top 3 Vegan Restaurants in Dublin, Ireland -->
-    <article class="food-post">
+    <article id="dublin" class="food-post">
         <h2 class="food-post-heading">The Top 3 Vegan Restaurants in Dublin, Ireland</h2>
         <img src="assets/images/dublin.jpg" alt="Tempel Bar Street in Dublin">
         <span><em>Thursday, 08.09.2022</em></span>
