Add new lighthouse performance after converting some of the images

--- a/about-us.html
+++ b/about-us.html
@@ -47,7 +47,7 @@
         <h1 id="about-us-heading">Who we are <i class="fa-solid fa-venus"></i></h1>
         <div id="about-us">
             <div class="about-us-content">
-                <img src="assets/images/Lila.jpg" alt="Headshot of woman smiling">
+                <img src="assets/images/Lila.webp" alt="Headshot of woman smiling">
                 <h2>Lila,30</h2>
                 <p>I'm Lila, a pastry chef originally from Germany. I started travelling at the age of 19 and never
                     stopped- my first stop was New Zealand and I'm currently living in Ireland. I've visited more than
