--- a/food.html
+++ b/food.html
@@ -48,7 +48,7 @@
     <!-- Top 5 Vegan Restaurants to Visit in Berlin, Germany  -->
     <article class="food-post">
         <h2 class="food-post-heading">Top 5 Vegan Restaurants to Visit in Berlin, Germany</h2>
-        <img src="assets/images/berlin.jpg" alt="Brandenburger Gate Berlin">
+        <img src="assets/images/berlin.webp" alt="Brandenburger Gate Berlin">
         <span><em>Saturday, 10.09.2022</em></span>
         <hr>
         <p>Veganism is on the rise, and no city exemplifies this trend better than Berlin. Suppose you're a vegan
@@ -59,7 +59,7 @@
         <hr>
         <section>
             <h3>Cafe Vux</h3>
-            <img src="assets/images/CafeVux.jpeg" alt="people order at counter next to a fridge full of cakes">
+            <img src="assets/images/CafeVux.webp" alt="people order at counter next to a fridge full of cakes">
             <p>If you have a sweet tooth, then this is the place for you. Cafe Vux specializes in - you guessed it - all
                 things cake. But don't worry, they have savoury options too. And everything is vegan!</p>
         </section>
@@ -111,7 +111,7 @@
     <!-- The Top 3 Vegan Restaurants in Dublin, Ireland -->
     <article id="dublin" class="food-post">
         <h2 class="food-post-heading">The Top 3 Vegan Restaurants in Dublin, Ireland</h2>
-        <img src="assets/images/dublin.jpg" alt="Tempel Bar Street in Dublin">
+        <img src="assets/images/dublin.webp" alt="Tempel Bar Street in Dublin">
         <span><em>Thursday, 08.09.2022</em></span>
         <hr>
         <p>We're always on the lookout for good vegan food when we travel. And we have to say, Dublin does
@@ -123,7 +123,7 @@
         <hr>
         <section>
             <h3>Cornucopia</h3>
-            <img src="assets/images/Cornucopia.jpg" alt="shot from above of two plated salads with food garnish around">
+            <img src="assets/images/Cornucopia.webp" alt="shot from above of two plated salads with food garnish around">
             <p>Cornucopia has been serving up delicious vegetarian and vegan food in Dublin since Sinead O'Connor was
                 topping the charts with "Nothing Compares 2 U." This restaurant is located in the heart of Dublin's city
                 centre and offers an extensive menu of both hot and cold dishes. Whether you're looking for a light
