--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <hr>
         <div id="latest-posts">
             <div class="latest-posts-body">
-                <a href="food.html"><img class="latest-posts-image" src="assets/images/berlin.jpg"
+                <a href="food.html"><img class="latest-posts-image" src="assets/images/berlin.webp"
                         alt="Brandenburger Gate Berlin"></a>
                 <a class="title-link" href="food.html">
                     <h3 class="latest-posts-title">Top 5 Vegan Restaurants to Visit in Berlin, Germany</h3>
@@ -76,7 +76,7 @@
             </div>
 
             <div class="latest-posts-body">
-                <a href="travel.html"><img class="latest-posts-image" src="assets/images/bali.jpg"
+                <a href="travel.html"><img class="latest-posts-image" src="assets/images/bali.webp"
                         alt="Woman sitting on steps of a house overlooking a beach sourrounded by mountains"></a>
                 <a class="title-link" href="travel.html">
                     <h3 class="latest-posts-title">Top 3 Vegan Accomodations in Bali, Indonesia</h3>
@@ -90,7 +90,7 @@
             </div>
 
             <div class="latest-posts-body">
-                <a href="/food.html#dublin"><img class="latest-posts-image" src="assets/images/dublin.jpg"
+                <a href="/food.html#dublin"><img class="latest-posts-image" src="assets/images/dublin.webp"
                         alt="Tempel Bar Street in Dublin"></a>
                 <a class="title-link" href="/food.html#dublin">
                     <h3 class="latest-posts-title">The Top 3 Vegan Restaurants in Dublin, Ireland</h3>
