--- a/travel.html
+++ b/travel.html
@@ -46,7 +46,7 @@
     <h1 id="travel-heading">Travel Posts</h1>
     <article class="travel-post">
         <h2 class="travel-post-heading">Top 3 Vegan Accomodations in Bali, Indonesia</h2>
-        <img src="assets/images/bali.jpg"
+        <img src="assets/images/bali.webp"
             alt="Woman sitting on steps of a house overlooking a beach sourrounded by mountains">
         <span><em>Friday, 09.09.2022</em></span>
         <hr>
@@ -68,7 +68,7 @@
         <hr>
         <section>
             <h3>Bali Eco Stay</h3>
-            <img src="assets/images/BaliEcoStay.jpg" alt="Tree House surrounded by forrest">
+            <img src="assets/images/BaliEcoStay.webp" alt="Tree House surrounded by forrest">
             <p>For those who want to get back to nature, Bali Eco Stay is the perfect place to
                 stay. This working farm offers guests the chance to get their hands dirty and learn about
                 organic farming methods. And when you're not busy tending to the rice paddies or collecting eggs
@@ -79,7 +79,7 @@
 
         <section>
             <h3>Chapung Sebali</h3>
-            <img src="assets/images/ChapungSebali.jpg"
+            <img src="assets/images/ChapungSebali.webp"
                 alt="view of the pool and terrace and woman sitting on rock in pool ">
             <p>Located in Ubud, Chapung Sebali is a haven for health-conscious travellers. As well as offering
                 yoga and meditation classes, this luxury retreat also serves up some of the best vegan food in
