Fix link on Dublin blog post

--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
             </div>
 
             <div class="latest-posts-body">
-                <a href="/food.html#dublin"><img class="latest-posts-image" src="assets/images/dublin.webp"
+                <a href="./food.html#dublin"><img class="latest-posts-image" src="assets/images/dublin.webp"
                         alt="Tempel Bar Street in Dublin"></a>
-                <a class="title-link" href="/food.html#dublin">
+                <a class="title-link" href="./food.html#dublin">
                     <h3 class="latest-posts-title">The Top 3 Vegan Restaurants in Dublin, Ireland</h3>
                 </a>
                 <hr>
                 <p class="latest-posts-description">Dublin has an ever-growing number
                     of plant-based eateries. Whether you're a local looking for some new culinary inspiration or a
                     traveller in search of delicious vegan food, look no
-                    further than this list of the <a class="title-link-2" href="/food.html#dublin">Top 3 Vegan Restaurants</a>.
+                    further than this list of the <a class="title-link-2" href="./food.html#dublin">Top 3 Vegan Restaurants</a>.
                 </p>
             </div>
         </div>
