Add: converted all images to .webp

--- a/about-us.html
+++ b/about-us.html
@@ -24,7 +24,7 @@
 <body>
     <header id="header">
         <a href="index.html">
-            <img id="logo" src="assets/images/One-Backpack-For-Two_logo.jpg" alt="logo">
+            <img id="logo" src="assets/images/One-Backpack-For-Two_logo.webp" alt="logo">
         </a>
         <nav>
             <ul id="menu">
@@ -59,7 +59,7 @@
                     the best things to happen to me.</p>
             </div>
             <div class="about-us-content">
-                <img src="assets/images/Saskia.jpg" alt="Headshot of woman facing the Camera">
+                <img src="assets/images/Saskia.webp" alt="Headshot of woman facing the Camera">
                 <h2>Saskia,31</h2>
                 <p>Hi, I'm the technical brain behind the blog. I enjoy programming immensely as well as hiking,
                     travelling and eating vegan food. I also end up taking many of the photographs.
