--- a/food.html
+++ b/food.html
@@ -24,7 +24,7 @@
 <body>
     <header id="header">
         <a href="index.html">
-            <img id="logo" src="assets/images/One-Backpack-For-Two_logo.jpg" alt="logo">
+            <img id="logo" src="assets/images/One-Backpack-For-Two_logo.webp" alt="logo">
         </a>
         <nav>
             <ul id="menu">
@@ -66,7 +66,7 @@
         <hr>
         <section>
             <h3>Kopps</h3>
-            <img src="assets/images/Kopps.jpg" alt="potrait of a plate with food on a table and a glass of wine in the background ">
+            <img src="assets/images/Kopps.webp" alt="potrait of a plate with food on a table and a glass of wine in the background ">
             <p>If you're looking for a fine dining experience, Kopps is the place for you. This Michelin-starred
                 restaurant serves up creative takes on classic German dishes, all of which are 100% vegan. From savoury
                 cabbage strudel to delicate almond tarts, there's something for everyone at Kopp's.</p>
@@ -75,7 +75,7 @@
 
         <section>
             <h3>Frea</h3>
-            <img src="assets/images/Frea.jpg" alt="set table with food surrounded by plants in restaurant">
+            <img src="assets/images/Frea.webp" alt="set table with food surrounded by plants in restaurant">
             <p>This restaurant is perfect if you're looking for a fancier experience. Frea serves up gourmet
                 vegan cuisine that will tantalize your taste buds. Make sure to make a reservation ahead of time though,
                 as it's always crowded!</p>
@@ -94,7 +94,7 @@
 
         <section>
             <h3>Lucky Leek</h3>
-            <img src="assets/images/LuckyLeek.jpg" alt="potrait of a plate with food on a table and a glass of wine in the background ">
+            <img src="assets/images/LuckyLeek.webp" alt="potrait of a plate with food on a table and a glass of wine in the background ">
             <p>For those looking for a more upscale experience, look no further than Lucky Leek. This Michelin-starred
                 restaurant is known for its creative and ever-changing menu, offering unique dishes such as onion tart
                 with pistachio cream or roasted cauliflower with smoked almond milk. With a focus on seasonal and local
@@ -132,7 +132,7 @@
         <hr>
         <section>
             <h3>Veginity</h3>
-            <img src="assets/images/Veginity.jpg" alt="shot from above of a table full with brunch items">
+            <img src="assets/images/Veginity.webp" alt="shot from above of a table full with brunch items">
             <p>2.As the name suggests, this restaurant is 100% vegan. They offer a wide range of
                 dishes for breakfast, lunch and dinner. Veginity is located in Dublin D1, so
                 it's just a short walk from the city centre. Perfect if you don't want to venture too far from all the
