--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <header id="header">
         <a href="index.html">
-            <img id="logo" src="assets/images/One-Backpack-For-Two_logo.jpg" alt="logo">
+            <img id="logo" src="assets/images/One-Backpack-For-Two_logo.webp" alt="logo">
         </a>
         <nav>
             <ul id="menu">
@@ -107,7 +107,7 @@
     <section id="newsletter-section">
         <div id="newsletter-box">
             <div id="newsletter-image">
-                <img src="assets/images/newsletter.jpg" alt="Vintage Camera on top of old suitcase">
+                <img src="assets/images/newsletter.webp" alt="Vintage Camera on top of old suitcase">
             </div>
             <div id="newsletter-content">
                 <h3>Get your monthly dose of Travel and Food Inspo! <i class="fa-regular fa-envelope"></i></h3>
