--- a/travel.html
+++ b/travel.html
@@ -24,7 +24,7 @@
 <body>
     <header id="header">
         <a href="index.html">
-            <img id="logo" src="assets/images/One-Backpack-For-Two_logo.jpg" alt="logo">
+            <img id="logo" src="assets/images/One-Backpack-For-Two_logo.webp" alt="logo">
         </a>
         <nav>
             <ul id="menu">
@@ -58,7 +58,7 @@
         <hr>
         <section>
             <h3>The Shanti Residence</h3>
-            <img src="assets/images/TheShantiResidence.jpg" alt="room with a private outdoor pool">
+            <img src="assets/images/TheShantiResidence.webp" alt="room with a private outdoor pool">
             <p>This luxury villa is perfect for vegans who want to experience the best of what Bali has to
                 offer. Set amidst tropical gardens and located just minutes from Seminyak Beach, The Shanti
                 Residence is a haven of peace and tranquillity. And the best part? All of the food is 100%
