Fix: correcting typing errors. Add: Adding the fixing of file path error for #dublin to TESTING.md

--- a/food.html
+++ b/food.html
@@ -133,7 +133,7 @@
         <section>
             <h3>Veginity</h3>
             <img src="assets/images/Veginity.webp" alt="shot from above of a table full with brunch items">
-            <p>2.As the name suggests, this restaurant is 100% vegan. They offer a wide range of
+            <p>As the name suggests, this restaurant is 100% vegan. They offer a wide range of
                 dishes for breakfast, lunch and dinner. Veginity is located in Dublin D1, so
                 it's just a short walk from the city centre. Perfect if you don't want to venture too far from all the
                 action! And don't forget to grab one of their delicious pastries!</p>
